--- a/package.json
+++ b/package.json
@@ -1,130 +1,113 @@
 {
-  "_from": "protractor",
-  "_id": "protractor@5.4.2",
+  "_from": "webdriver-manager@^12.0.6",
+  "_id": "webdriver-manager@12.1.6",
   "_inBundle": false,
-  "_integrity": "sha512-zlIj64Cr6IOWP7RwxVeD8O4UskLYPoyIcg0HboWJL9T79F1F0VWtKkGTr/9GN6BKL+/Q/GmM7C9kFVCfDbP5sA==",
-  "_location": "/protractor",
-  "_phantomChildren": {
-    "adm-zip": "0.4.13",
-    "chalk": "1.1.3",
-    "del": "2.2.2",
-    "glob": "7.1.4",
-    "ini": "1.3.5",
-    "minimist": "1.2.0",
-    "q": "1.4.1",
-    "request": "2.88.0",
-    "rimraf": "2.7.1",
-    "semver": "5.7.1",
-    "xml2js": "0.4.19"
-  },
+  "_integrity": "sha512-B1mOycNCrbk7xODw7Jgq/mdD3qzPxMaTsnKIQDy2nXlQoyjTrJTTD0vRpEZI9b8RibPEyQvh9zIZ0M1mpOxS3w==",
+  "_location": "/protractor/webdriver-manager",
+  "_phantomChildren": {},
   "_requested": {
-    "type": "tag",
+    "type": "range",
     "registry": true,
-    "raw": "protractor",
-    "name": "protractor",
-    "escapedName": "protractor",
-    "rawSpec": "",
+    "raw": "webdriver-manager@^12.0.6",
+    "name": "webdriver-manager",
+    "escapedName": "webdriver-manager",
+    "rawSpec": "^12.0.6",
     "saveSpec": null,
-    "fetchSpec": "latest"
+    "fetchSpec": "^12.0.6"
   },
   "_requiredBy": [
-    "#USER",
-    "/"
+    "/protractor"
   ],
-  "_resolved": "https://registry.npmjs.org/protractor/-/protractor-5.4.2.tgz",
-  "_shasum": "329efe37f48b2141ab9467799be2d4d12eb48c13",
-  "_spec": "protractor",
-  "_where": "D:\\ssssssss",
+  "_resolved": "https://registry.npmjs.org/webdriver-manager/-/webdriver-manager-12.1.6.tgz",
+  "_shasum": "9e5410c506d1a7e0a7aa6af91ba3d5bb37f362b6",
+  "_spec": "webdriver-manager@^12.0.6",
+  "_where": "C:\\Users\\sai\\AppData\\Roaming\\npm\\node_modules\\protractor",
   "author": {
-    "name": "Julie Ralph",
-    "email": "ju.ralph@gmail.com"
+    "name": "Craig Nishina",
+    "email": "craig.nishina@gmail.com"
   },
   "bin": {
-    "protractor": "bin/protractor",
     "webdriver-manager": "bin/webdriver-manager"
   },
   "bugs": {
-    "url": "https://github.com/angular/protractor/issues"
+    "url": "https://github.com/angular/webdriver-manager/issues"
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@types/q": "^0.0.32",
-    "@types/selenium-webdriver": "^3.0.0",
-    "blocking-proxy": "^1.0.0",
-    "browserstack": "^1.5.1",
-    "chalk": "^1.1.3",
+    "adm-zip": "^0.4.9",
+    "chalk": "^1.1.1",
+    "del": "^2.2.0",
     "glob": "^7.0.3",
-    "jasmine": "2.8.0",
-    "jasminewd2": "^2.1.0",
-    "optimist": "~0.6.0",
-    "q": "1.4.1",
-    "saucelabs": "^1.5.0",
-    "selenium-webdriver": "3.6.0",
-    "source-map-support": "~0.4.0",
-    "webdriver-js-extender": "2.1.0",
-    "webdriver-manager": "^12.0.6"
+    "ini": "^1.3.4",
+    "minimist": "^1.2.0",
+    "q": "^1.4.1",
+    "request": "^2.87.0",
+    "rimraf": "^2.5.2",
+    "semver": "^5.3.0",
+    "xml2js": "^0.4.17"
   },
   "deprecated": false,
-  "description": "Webdriver E2E test wrapper for Angular.",
+  "description": "A selenium server and browser driver manager for your end to end tests.",
   "devDependencies": {
+    "@types/adm-zip": "^0.4.29",
     "@types/chalk": "^0.4.28",
+    "@types/form-data": "^0.0.33",
     "@types/glob": "^5.0.29",
-    "@types/jasmine": "^2.5.47",
-    "@types/jasminewd2": "^2.0.0",
+    "@types/ini": "^1.3.28",
+    "@types/jasmine": "^2.5.43",
     "@types/minimatch": "^2.0.28",
     "@types/minimist": "^1.1.28",
-    "@types/node": "^6.0.46",
-    "@types/optimist": "^0.0.29",
-    "body-parser": "~1.15.2",
-    "chai": "~3.5.0",
-    "chai-as-promised": "~5.3.0",
-    "clang-format": "1.0.49",
-    "expect.js": "~0.3.1",
-    "express": "~4.14.0",
-    "gulp": "^3.9.1",
-    "gulp-clang-format": "1.0.23",
-    "gulp-tslint": "^7.0.1",
-    "jshint": "^2.9.2",
-    "lodash": "^4.5.1",
-    "marked": "^0.3.3",
-    "mocha": "2.5.3",
-    "rimraf": "~2.5.3",
+    "@types/node": "^7.0.4",
+    "@types/q": "^0.0.32",
+    "@types/request": "^0.0.39",
+    "@types/rimraf": "^0.0.28",
+    "@types/selenium-webdriver": "^2.53.35",
+    "@types/semver": "^5.3.30",
+    "@types/xml2js": "0.0.32",
+    "clang-format": "^1.0.35",
+    "gulp": "^4.0.0",
+    "gulp-clang-format": "^1.0.23",
+    "jasmine": "^2.4.1",
     "run-sequence": "^1.1.5",
-    "semver": "^5.3.0",
-    "tslint": "^4.1.1",
-    "tslint-eslint-rules": "^3.1.0",
-    "typescript": "^2.9.2",
-    "vrsource-tslint-rules": "^4.0.1"
+    "selenium-webdriver": "~3.0.1",
+    "typescript": "~2.3.0"
   },
   "engines": {
     "node": ">=6.9.x"
   },
-  "homepage": "https://github.com/angular/protractor",
+  "homepage": "https://github.com/angular/webdriver-manager#readme",
   "keywords": [
     "angular",
     "test",
     "testing",
+    "protractor",
     "webdriver",
     "webdriverjs",
-    "selenium"
+    "selenium",
+    "selenium-webdriver"
   ],
   "license": "MIT",
-  "main": "built/index.js",
-  "name": "protractor",
+  "main": "built/lib/webdriver.js",
+  "name": "webdriver-manager",
   "repository": {
     "type": "git",
-    "url": "git://github.com/angular/protractor.git"
+    "url": "git://github.com/angular/webdriver-manager.git"
   },
   "scripts": {
-    "compile_to_es5": "gulp compile_to_es5",
     "format": "gulp format",
-    "install_testapp": "cd testapp && npm install",
-    "prepublish": "gulp prepublish",
-    "pretest": "gulp pretest",
-    "start": "cd testapp && npm start",
-    "test": "node scripts/test.js",
-    "website": "cd website && npm start"
+    "format-enforce": "gulp format:enforce",
+    "gulp": "gulp",
+    "jasmine": "jasmine",
+    "posttest-e2e": "webdriver-manager shutdown",
+    "prepublish": "npm run format-enforce && tsc && gulp copy",
+    "pretest": "tsc && gulp copy",
+    "pretest-e2e": "npm run pretest && npm run pretest-e2e:update && npm run pretest-e2e:start",
+    "pretest-e2e:start": "webdriver-manager start --detach --seleniumPort 4444 --android --appium-port 4723 --quiet",
+    "pretest-e2e:update": "webdriver-manager update --android --android-accept-licenses --avds none",
+    "test": "npm run test-unit && npm run test-e2e",
+    "test-e2e": "jasmine JASMINE_CONFIG_PATH=e2e_spec/support/headless.json",
+    "test-unit": "jasmine",
+    "tsc": "tsc"
   },
-  "typings": "built/index.d.ts",
-  "version": "5.4.2"
+  "version": "12.1.6"
 }
